@@ -22,6 +22,7 @@ Flow Record:
   src port     =                20
   dst port     =                22
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                 2
   in bytes     =              2048
 
@@ -40,6 +41,7 @@ Flow Record:
   src port     =                30
   dst port     =                33
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                 3
   in bytes     =              3072
   src addr     =       172.16.1.66
@@ -60,6 +62,7 @@ Flow Record:
   src port     =                40
   dst port     =                44
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                 4
   in bytes     =              4096
   src addr     =  fe80::2110:abcd:1234:0
@@ -80,6 +83,7 @@ Flow Record:
   src port     =                80
   dst port     =             22222
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                 4
   in bytes     =              4096
   src addr     =       172.16.2.66
@@ -88,7 +92,6 @@ Flow Record:
   output       =               200
   src mask     =                16 172.16.0.0/16
   dst mask     =                24 192.168.170.0/24
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 1
   biFlow Dir   =              0x00 
@@ -109,6 +112,7 @@ Flow Record:
   src port     =                80
   dst port     =             22222
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                14
   in bytes     =              5120
   src addr     =       172.16.2.66
@@ -117,7 +121,6 @@ Flow Record:
   output       =               200
   src mask     =                16 172.16.0.0/16
   dst mask     =                24 192.168.170.0/24
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 1
   biFlow Dir   =              0x00 
@@ -138,6 +141,7 @@ Flow Record:
   src port     =                80
   dst port     =             22222
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                24
   in bytes     =              6144
   src addr     =       172.16.2.66
@@ -146,7 +150,6 @@ Flow Record:
   output       =               200
   src mask     =                16 172.16.0.0/16
   dst mask     =                24 192.168.170.0/24
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 1
   biFlow Dir   =              0x00 
@@ -167,6 +170,7 @@ Flow Record:
   src port     =             22222
   dst port     =                80
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                10
   in bytes     =              1024
   src addr     =   192.168.170.101
@@ -175,7 +179,6 @@ Flow Record:
   output       =               100
   src mask     =                24 192.168.170.0/24
   dst mask     =                16 172.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -196,6 +199,7 @@ Flow Record:
   src port     =             22222
   dst port     =                80
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                20
   in bytes     =              2048
   src addr     =   192.168.170.101
@@ -204,7 +208,6 @@ Flow Record:
   output       =               100
   src mask     =                24 192.168.170.0/24
   dst mask     =                16 172.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -225,6 +228,7 @@ Flow Record:
   src port     =             22222
   dst port     =                80
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                30
   in bytes     =              3072
   src addr     =   192.168.170.101
@@ -233,7 +237,6 @@ Flow Record:
   output       =               100
   src mask     =                24 192.168.170.0/24
   dst mask     =                16 172.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -254,6 +257,7 @@ Flow Record:
   src port     =             22232
   dst port     =                91
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                31
   in bytes     =              4096
   src addr     =    72.138.170.101
@@ -262,7 +266,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -286,6 +289,7 @@ Flow Record:
   src port     =             22242
   dst port     =               102
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                32
   in bytes     =              5120
   src addr     =    72.138.170.101
@@ -294,7 +298,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -320,6 +323,7 @@ Flow Record:
   src port     =             22252
   dst port     =               113
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                33
   in bytes     =              6144
   src addr     =    72.138.170.101
@@ -328,7 +332,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -356,6 +359,7 @@ Flow Record:
   src port     =             22262
   dst port     =               124
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                34
   in bytes     =              7168
   src addr     =    72.138.170.101
@@ -364,7 +368,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -393,6 +396,7 @@ Flow Record:
   src port     =             22272
   dst port     =               135
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                35
   in bytes     =              8192
   src addr     =    72.138.170.101
@@ -401,7 +405,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -431,6 +434,7 @@ Flow Record:
   src port     =             22282
   dst port     =               146
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                36
   in bytes     =              9216
   src addr     =    72.138.170.101
@@ -439,7 +443,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -470,6 +473,7 @@ Flow Record:
   src port     =             22292
   dst port     =               157
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                37
   in bytes     =             10240
   src addr     =    72.138.170.101
@@ -478,7 +482,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -519,6 +522,7 @@ Flow Record:
   src port     =             22302
   dst port     =               168
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                38
   in bytes     =             11264
   src addr     =    72.138.170.101
@@ -527,7 +531,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -572,6 +575,7 @@ Flow Record:
   src port     =             22312
   dst port     =               179
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                39
   in bytes     =             12288
   src addr     =    72.138.170.101
@@ -580,7 +584,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
@@ -627,6 +630,7 @@ Flow Record:
   src port     =             22322
   dst port     =               190
   src tos      =                 3
+  fwd status   =                 1
   in packets   =                40
   in bytes     =             13312
   src addr     =    72.138.170.101
@@ -635,7 +639,6 @@ Flow Record:
   output       =               100
   src mask     =                24 72.138.170.0/24
   dst mask     =                16 42.16.0.0/16
-  fwd status   =                 1
   dst tos      =                 3
   direction    =                 2
   biFlow Dir   =              0x00 
